include/livesprite/livesprite_c.h

/* ------------------------------------------------------------------ types -- */

/* Every entity handle. Zero is the null handle and is never valid.
 * The C++ API distinguishes SpriteId from LayerId at compile time; C cannot,
 * so the engine checks at the boundary instead. */
typedef uint64_t ls_id;
typedef int32_t ls_error;
/* Mirrors ls::LSError. The numbering is part of the ABI: append only. */
#define LS_OK                                 0
typedef struct ls_context ls_context;
typedef struct ls_raster  ls_raster;
typedef struct { float x, y; } ls_vec2f;
typedef struct { uint8_t r, g, b, a; } ls_color;
#define LS_PROFILE_EXPORT     1
/* Palette policies, mirroring ls::PalettePolicy. */
#define LS_PALETTE_UNCONSTRAINED 0
typedef struct {
    int32_t  type;            /* LS_PROFILE_*                                */
    uint32_t output_width;
    uint32_t output_height;
    int32_t  palette_policy;  /* LS_PALETTE_*                                */
    /* Only meaningful for patterns anchored in Export space, such as a sheet
     * cell that must keep its dither aligned across frames. */
    ls_vec2i export_origin;
} ls_profile;
/* ------------------------------------------------------------ engine info -- */

/* Packed major<<16 | minor<<8 | patch. A file written by a newer major is
 * refused, so a binding can compare before it opens anything. */
LS_C_API uint32_t    ls_engine_version(void);
/* A short name for an error code. Never NULL, never owned by the caller. */
LS_C_API const char* ls_error_string(ls_error error);
/* ---------------------------------------------------------------- context -- */

/* One context owns every entity given out through it. It is not thread-safe:
 * one thread at a time, or lock outside. */
LS_C_API ls_context* ls_context_create(void);
LS_C_API void        ls_context_destroy(ls_context* ctx);
/* --------------------------------------------------------------- document -- */

LS_C_API ls_error ls_document_create(ls_context* ctx, const char* name,
                                     uint32_t width, uint32_t height,
                                     ls_id* out_document);
/* ------------------------------------------------------- sprites & layers -- */

LS_C_API ls_error ls_sprite_create(ls_context* ctx, ls_id document, ls_id* out_sprite);
LS_C_API ls_error ls_layer_create(ls_context* ctx, ls_id sprite, const char* name,
                                  ls_id* out_layer);
/* --------------------------------------------------------------- geometry -- */

LS_C_API ls_error ls_geometry_rect(ls_context* ctx, ls_id document, ls_vec2f origin,
                                   float width, float height, float corner_radius,
                                   ls_id* out_geometry);
/* ---------------------------------------------------------------- regions -- */

LS_C_API ls_error ls_region_from_geometry(ls_context* ctx, ls_id geometry,
                                          ls_id* out_region);
/* ------------------------------------------------------------- operations -- */

/* The catalogue, without hard-coding it. Index from 0 to ls_operation_type_count. */
LS_C_API size_t   ls_operation_type_count(void);
/* Create an operation by type name -- "FillSolidOp", "RotateOp", and so on --
 * then set its parameters by name. at_index of -1 appends. */
LS_C_API ls_error ls_operation_add(ls_context* ctx, ls_id layer, const char* type_name,
                                   int32_t at_index, ls_id* out_operation);
/* Setters. The engine converts where a conversion is lossless and answers
 * LS_ERROR_OPERATION_TYPE_MISMATCH where it is not. */
LS_C_API ls_error ls_operation_set_float(ls_context* ctx, ls_id op, const char* name, float v);
LS_C_API ls_error ls_operation_set_id(ls_context* ctx, ls_id op, const char* name, ls_id v);
LS_C_API ls_error ls_operation_set_vec2(ls_context* ctx, ls_id op, const char* name, ls_vec2f v);
LS_C_API ls_error ls_operation_set_color(ls_context* ctx, ls_id op, const char* name, ls_color v);
/* ---------------------------------------------------------------- compile -- */

/* The first moment pixels exist. The returned raster is owned by the caller
 * until ls_raster_release. */
LS_C_API ls_error ls_compile_sprite(ls_context* ctx, ls_id sprite, const ls_profile* profile,
                                    ls_raster** out_raster);
LS_C_API uint32_t       ls_raster_width(const ls_raster* raster);
LS_C_API uint32_t       ls_raster_height(const ls_raster* raster);
/* Tightly packed RGBA8, row-major, width*height*4 bytes. Valid until release. */
LS_C_API const uint8_t* ls_raster_data(const ls_raster* raster);
LS_C_API size_t         ls_raster_size(const ls_raster* raster);
LS_C_API void           ls_raster_release(ls_raster* raster);