legacy/livesprite_flat.h

struct Vec2i {
    int32_t x = 0;
    int32_t y = 0;
};
struct Vec2f {
    float x = 0.0f;
    float y = 0.0f;
};
struct Color {
    uint8_t r = 0;
    uint8_t g = 0;
    uint8_t b = 0;
    uint8_t a = 255;
};